--- a/index.html
+++ b/index.html
@@ -7,3 +7,9 @@
   </div>
 </body>
 <script src="main.js"></script>
+
+<!-- Auth0Lock script -->
+<script src="//cdn.auth0.com/js/lock-7.9.min.js"></script>
+
+<!-- Setting the right viewport -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
